--- a/InvenTree/order/templates/order/sales_order_detail.html
+++ b/InvenTree/order/templates/order/sales_order_detail.html
@@ -176,6 +176,7 @@
 
     function reloadTable() {
         $("#so-lines-table").bootstrapTable("refresh");
+        reloadTotal;
     }
 
 $("#new-so-line").click(function() {
@@ -643,6 +644,7 @@ function setupCallbacks() {
 
 function additionalreloadTable() {
     $("#so-additional-lines-table").bootstrapTable("refresh");
+    reloadTotal();
 }
 
 
