Add supplier_reference field to form

--- a/InvenTree/order/templates/order/order_base.html
+++ b/InvenTree/order/templates/order/order_base.html
@@ -170,6 +170,7 @@ $("#edit-order").click(function() {
             supplier: {
             },
             {% endif %}
+            supplier_reference: {},
             description: {},
             target_date: {
                 icon: 'fa-calendar-alt',
