Similar fix for customer_reference field

--- a/InvenTree/order/templates/order/sales_order_base.html
+++ b/InvenTree/order/templates/order/sales_order_base.html
@@ -163,6 +163,7 @@ $("#edit-order").click(function() {
             customer: {
             },
             {% endif %}
+            customer_reference: {},
             description: {},
             target_date: {
                 icon: 'fa-calendar-alt',
