--- a/InvenTree/company/templates/company/manufacturer_part.html
+++ b/InvenTree/company/templates/company/manufacturer_part.html
@@ -194,18 +194,25 @@ $("#supplier-part-delete").click(function() {
 
     var selections = $("#supplier-table").bootstrapTable("getSelections");
 
-    var parts = [];
+    var requests = [];
 
-    selections.forEach(function(item) {
-        parts.push(item.pk);
-    });
-
-    launchModalForm("{% url 'supplier-part-delete' %}", {
-        data: {
-            parts: parts,
-        },
-        reload: true,
-    });
+    showQuestionDialog(
+        '{% trans "Delete Supplier Parts?" %}',
+        '{% trans "All selected supplier parts will be deleted" %}',
+        {
+            accept: function() {
+                selections.forEach(function(part) {
+                    var url = `/api/company/part/${part.pk}/`;
+        
+                    requests.push(inventreeDelete(url));
+                });
+        
+                $.when.apply($, requests).then(function() {
+                    reloadSupplierPartTable();
+                });
+            }
+        }
+    );
 });
 
 $("#multi-parameter-delete").click(function() {
