--- a/InvenTree/company/templates/company/supplier_part.html
+++ b/InvenTree/company/templates/company/supplier_part.html
@@ -327,21 +327,21 @@ $('#order-part, #order-part2').click(function() {
 });
 
 $('#edit-part').click(function () {
-    launchModalForm(
-                    "{% url 'supplier-part-edit' part.id %}",
-                    {
-                        reload: true
-                    }
-    );
+
+    editSupplierPart({{ part.pk }}, {
+        onSuccess: function() {
+            location.reload();
+        }
+    });
 });
 
 $('#delete-part').click(function() {
-    launchModalForm(
-        "{% url 'supplier-part-delete' %}?part={{ part.id }}",
-        {
-            redirect: "{% url 'company-detail' part.supplier.id %}"
+
+    deleteSupplierPart({{ part.pk }}, {
+        onSuccess: function() {
+            window.location.href = "{% url 'company-detail' part.supplier.id %}";
         }
-    );
+    });
 });
 
 attachNavCallbacks({
