adding styling to autocomplete

--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -195,6 +195,7 @@ $(document).ready(function () {
     $("#search-bar" ).autocomplete({
       source: "{% url 'search-api' %}",
       minLength: 2,
+      classes: {'ui-autocomplete': 'dropdown-menu'},
       select: function( event, ui ) {
         window.location = '/part/' + ui.item.id + '/';
       }
