Fix duplicate table naming

--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -217,7 +217,7 @@
 <div class='panel-content'>
     <div class="row">
         <div class="col col-md-6">
-            <table class='table table-bom table-condensed' data-toolbar="#button-toolbar" id='bom-table'></table>
+            <table class='table table-bom table-condensed' data-toolbar="#button-toolbar" id='bom-pricing-table'></table>
         </div>
 
         {% if part.bom_count > 0 %}
