--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -644,17 +644,9 @@
     });
 
     $("#stock-export").click(function() {
-        launchModalForm("{% url 'stock-export-options' %}", {
-            submit_text: "{% trans 'Export' %}",
-            success: function(response) {
-                var url = "{% url 'stock-export' %}";
 
-                url += "?format=" + response.format;
-                url += "&cascade=" + response.cascade;
-                url += "&part={{ part.id }}";
-
-                location.href = url;
-            },
+        exportStock({
+            part: {{ part.pk }}
         });
     });
 
