--- a/InvenTree/stock/templates/stock/location.html
+++ b/InvenTree/stock/templates/stock/location.html
@@ -227,20 +227,11 @@
     {% endif %}
 
     $("#stock-export").click(function() {
-        launchModalForm("{% url 'stock-export-options' %}", {
-            submit_text: '{% trans "Export" %}',
-            success: function(response) {
-                var url = "{% url 'stock-export' %}";
 
-                url += "?format=" + response.format;
-                url += "&cascade=" + response.cascade;
-
-                {% if location %}
-                url += "&location={{ location.id }}";
-                {% endif %}
-
-                location.href = url;
-            }
+        exportStock({
+            {% if location %}
+            location: {{ location.pk }}
+            {% endif %}
         });
     });
 
