Updated PO upload template, moved call to button, improved cleaned_decimal method to handle comma separator

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -22,6 +22,9 @@
             <button type='button' class='btn btn-primary' id='new-po-line'>
                 <span class='fas fa-plus-circle'></span> {% trans "Add Line Item" %}
             </button>
+            <a class='btn btn-primary' href='{% url "po-upload" order.id %}' role='button'>
+                <span class='fas fa-file-upload side-icon'></span> {% trans "Upload File" %}
+            </a>
             {% endif %}
         </div>
         
