--- a/InvenTree/templates/InvenTree/settings/global.html
+++ b/InvenTree/templates/InvenTree/settings/global.html
@@ -31,4 +31,11 @@
     </tbody>
 </table>
 
+<h4>{% trans "Search Settings" %}</h4>
+<table class='table table-striped table-condensed'>
+    <tbody>
+        {% include "InvenTree/settings/setting.html" with key="SEARCH_PREVIEW_RESULTS" icon="fa-search" %}
+    </tbody>
+</table>
+
 {% endblock %}
