--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -142,11 +142,11 @@
 <script type='text/javascript' src="{% static 'script/randomColor.min.js' %}"></script>
 
 <!-- general InvenTree -->
-<script type='text/javascript' src="{% static 'script/inventree/inventree.js' %}"></script>
 <script type='text/javascript' src="{% static 'script/inventree/notification.js' %}"></script>
 <script type='text/javascript' src="{% static 'script/inventree/sidenav.js' %}"></script>
 
 <!-- translated -->
+<script type='text/javascript' src="{% i18n_static 'inventree.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'api.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'attachment.js' %}"></script>
 <script type='text/javascript' src="{% i18n_static 'barcode.js' %}"></script>
