--- a/InvenTree/templates/InvenTree/settings/appearance.html
+++ b/InvenTree/templates/InvenTree/settings/appearance.html
@@ -63,5 +63,13 @@
     </form>
 </div>
 
+<h4>{% trans "User Settings" %}</h4>
+
+<table class='table table-striped table-condensed'>
+    {% include "InvenTree/settings/header.html" %}
+    <tbody>
+        {% include "InvenTree/settings/setting.html" with key="HOMEPAGE_PART_STARRED" user_setting=True %}
+    </tbody>
+</table>
 
 {% endblock %}
