--- a/InvenTree/templates/InvenTree/settings/appearance.html
+++ b/InvenTree/templates/InvenTree/settings/appearance.html
@@ -69,6 +69,9 @@
     {% include "InvenTree/settings/header.html" %}
     <tbody>
         {% include "InvenTree/settings/setting.html" with key="HOMEPAGE_PART_STARRED" user_setting=True %}
+        {% include "InvenTree/settings/setting.html" with key="HOMEPAGE_PART_LATEST" user_setting=True %}
+        {% include "InvenTree/settings/setting.html" with key="HOMEPAGE_BOM_VALIDATION" user_setting=True %}
+
     </tbody>
 </table>
 
