--- a/InvenTree/templates/InvenTree/settings/tabs.html
+++ b/InvenTree/templates/InvenTree/settings/tabs.html
@@ -8,6 +8,9 @@
     <li{% ifequal tab 'theme' %} class='active'{% endifequal %}>
         <a href="{% url 'settings-appearance' %}"><span class='fas fa-fill'></span> {% trans "Appearance" %}</a>
     </li>
+    <li{% ifequal tab 'user_settings' %} class='active'{% endifequal %}>
+        <a href="{% url 'settings-user-settings' %}"><span class='fas fa-fill'></span> {% trans "User Settings" %}</a>
+    </li>
 </ul>
 {% if user.is_staff %}
 <h4><span class='fas fa-cogs'></span> {% trans "InvenTree Settings" %}</h4>
