--- a/InvenTree/templates/InvenTree/index.html
+++ b/InvenTree/templates/InvenTree/index.html
@@ -93,11 +93,14 @@ function addHeaderAction(label, title, icon, options) {
     });
 }
 
+{% settings_value 'HOMEPAGE_PART_STARRED' user=request.user as setting_part_starred %}
+{% settings_value 'HOMEPAGE_PART_LATEST' user=request.user as setting_part_latest %}
+{% settings_value 'HOMEPAGE_BOM_VALIDATION' user=request.user as setting_bom_validation %}
+{% to_list setting_part_starred setting_part_latest setting_bom_validation as settings_list_part %}
 
-{% if roles.part.view %}
+{% if roles.part.view and True in settings_list_part %}
 addHeaderTitle('{% trans "Parts" %}');
 
-{% settings_value 'HOMEPAGE_PART_STARRED' user=request.user as setting_part_starred %}
 {% if setting_part_starred %}
 addHeaderAction('starred-parts', '{% trans "Starred Parts" %}', 'fa-star');
 loadSimplePartTable("#table-starred-parts", "{% url 'api-part-list' %}", {
@@ -108,7 +111,6 @@ loadSimplePartTable("#table-starred-parts", "{% url 'api-part-list' %}", {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_PART_LATEST' user=request.user as setting_part_latest %}
 {% if setting_part_latest %}
 addHeaderAction('latest-parts', '{% trans "Latest Parts" %}', 'fa-newspaper');
 loadSimplePartTable("#table-latest-parts", "{% url 'api-part-list' %}", {
@@ -120,7 +122,6 @@ loadSimplePartTable("#table-latest-parts", "{% url 'api-part-list' %}", {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_BOM_VALIDATION' user=request.user as setting_bom_validation %}
 {% if setting_bom_validation %}
 addHeaderAction('bom-validation', '{% trans "BOM Waiting Validation" %}', 'fa-times-circle');
 loadSimplePartTable("#table-bom-validation", "{% url 'api-part-list' %}", {
@@ -132,11 +133,22 @@ loadSimplePartTable("#table-bom-validation", "{% url 'api-part-list' %}", {
 {% endif %}
 {% endif %}
 
+{% settings_value 'HOMEPAGE_STOCK_RECENT' user=request.user as setting_stock_recent %}
+{% settings_value 'HOMEPAGE_STOCK_LOW' user=request.user as setting_stock_low %}
+{% settings_value 'HOMEPAGE_STOCK_DEPLETED' user=request.user as setting_stock_depleted %}
+{% settings_value 'HOMEPAGE_STOCK_NEEDED' user=request.user as setting_stock_needed %}
+{% settings_value "STOCK_ENABLE_EXPIRY" as expiry %}
+{% if expiry %}
+{% settings_value 'HOMEPAGE_STOCK_EXPIRED' user=request.user as setting_stock_expired %}
+{% settings_value 'HOMEPAGE_STOCK_STALE' user=request.user as setting_stock_stale %}
+{% to_list setting_stock_recent setting_stock_low setting_stock_depleted setting_stock_needed setting_stock_expired setting_stock_stale as settings_list_stock %}
+{% else %}
+{% to_list setting_stock_recent setting_stock_low setting_stock_depleted setting_stock_needed as settings_list_stock %}
+{% endif %}
 
-{% if roles.stock.view %}
+{% if roles.stock.view and True in settings_list_stock %}
 addHeaderTitle('{% trans "Stock" %}');
 
-{% settings_value 'HOMEPAGE_STOCK_RECENT' user=request.user as setting_stock_recent %}
 {% if setting_stock_recent %}
 addHeaderAction('recently-updated-stock', '{% trans "Recently Updated" %}', 'fa-clock');
 loadStockTable($('#table-recently-updated-stock'), {
@@ -150,7 +162,6 @@ loadStockTable($('#table-recently-updated-stock'), {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_STOCK_LOW' user=request.user as setting_stock_low %}
 {% if setting_stock_low %}
 addHeaderAction('low-stock', '{% trans "Low Stock" %}', 'fa-shopping-cart');
 loadSimplePartTable("#table-low-stock", "{% url 'api-part-list' %}", {
@@ -161,7 +172,6 @@ loadSimplePartTable("#table-low-stock", "{% url 'api-part-list' %}", {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_STOCK_DEPLETED' user=request.user as setting_stock_depleted %}
 {% if setting_stock_depleted %}
 addHeaderAction('depleted-stock', '{% trans "Depleted Stock" %}', 'fa-times');
 loadSimplePartTable("#table-depleted-stock", "{% url 'api-part-list' %}", {
@@ -172,7 +182,6 @@ loadSimplePartTable("#table-depleted-stock", "{% url 'api-part-list' %}", {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_STOCK_NEEDED' user=request.user as setting_stock_needed %}
 {% if setting_stock_needed %}
 addHeaderAction('stock-to-build', '{% trans "Required for Build Orders" %}', 'fa-bullhorn');
 loadSimplePartTable("#table-stock-to-build", "{% url 'api-part-list' %}", {
@@ -184,10 +193,8 @@ loadSimplePartTable("#table-stock-to-build", "{% url 'api-part-list' %}", {
 {% endif %}
 
 
-{% settings_value "STOCK_ENABLE_EXPIRY" as expiry %}
 {% if expiry %}
 
-{% settings_value 'HOMEPAGE_STOCK_EXPIRED' user=request.user as setting_stock_expired %}
 {% if setting_stock_expired %}
 addHeaderAction('expired-stock', '{% trans "Expired Stock" %}', 'fa-calendar-times');
 loadStockTable($("#table-expired-stock"), {
@@ -199,7 +206,6 @@ loadStockTable($("#table-expired-stock"), {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_STOCK_STALE' user=request.user as setting_stock_stale %}
 {% if setting_stock_stale %}
 addHeaderAction('stale-stock', '{% trans "Stale Stock" %}', 'fa-stopwatch');
 loadStockTable($("#table-stale-stock"), {
@@ -215,11 +221,13 @@ loadStockTable($("#table-stale-stock"), {
 {% endif %}
 {% endif %}
 
+{% settings_value 'HOMEPAGE_BUILD_PENDING' user=request.user as setting_build_pending %}
+{% settings_value 'HOMEPAGE_BUILD_OVERDUE' user=request.user as setting_build_overdue %}
+{% to_list setting_build_pending setting_build_overdue as settings_list_build %}
 
-{% if roles.build.view %}
+{% if roles.build.view and True in settings_list_build %}
 addHeaderTitle('{% trans "Build Orders" %}');
 
-{% settings_value 'HOMEPAGE_BUILD_PENDING' user=request.user as setting_build_pending %}
 {% if setting_build_pending %}
 addHeaderAction('build-pending', '{% trans "Build Orders In Progress" %}', 'fa-cogs');
 loadBuildTable("#table-build-pending", {
@@ -231,7 +239,6 @@ loadBuildTable("#table-build-pending", {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_BUILD_OVERDUE' user=request.user as setting_build_overdue %}
 {% if setting_build_overdue %}
 addHeaderAction('build-overdue', '{% trans "Overdue Build Orders" %}', 'fa-calendar-times');
 loadBuildTable("#table-build-overdue", {
@@ -245,11 +252,13 @@ loadBuildTable("#table-build-overdue", {
 
 {% endif %}
 
+{% settings_value 'HOMEPAGE_PO_OUTSTANDING' user=request.user as setting_po_outstanding %}
+{% settings_value 'HOMEPAGE_PO_OVERDUE' user=request.user as setting_po_overdue %}
+{% to_list setting_po_outstanding setting_po_overdue as settings_list_po %}
 
-{% if roles.purchase_order.view %}
+{% if roles.purchase_order.view and True in settings_list_po %}
 addHeaderTitle('{% trans "Purchase Orders" %}');
 
-{% settings_value 'HOMEPAGE_PO_OUTSTANDING' user=request.user as setting_po_outstanding %}
 {% if setting_po_outstanding %}
 addHeaderAction('po-outstanding', '{% trans "Outstanding Purchase Orders" %}', 'fa-sign-in-alt');
 loadPurchaseOrderTable("#table-po-outstanding", {
@@ -261,7 +270,6 @@ loadPurchaseOrderTable("#table-po-outstanding", {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_PO_OVERDUE' user=request.user as setting_po_overdue %}
 {% if setting_po_overdue %}
 addHeaderAction('po-overdue', '{% trans "Overdue Purchase Orders" %}', 'fa-calendar-times');
 loadPurchaseOrderTable("#table-po-overdue", {
@@ -275,11 +283,13 @@ loadPurchaseOrderTable("#table-po-overdue", {
 
 {% endif %}
 
+{% settings_value 'HOMEPAGE_SO_OUTSTANDING' user=request.user as setting_so_outstanding %}
+{% settings_value 'HOMEPAGE_SO_OVERDUE' user=request.user as setting_so_overdue %}
+{% to_list setting_so_outstanding setting_so_overdue as settings_list_so %}
 
-{% if roles.sales_order.view %}
+{% if roles.sales_order.view and True in settings_list_so %}
 addHeaderTitle('{% trans "Sales Orders" %}');
 
-{% settings_value 'HOMEPAGE_SO_OUTSTANDING' user=request.user as setting_so_outstanding %}
 {% if setting_so_outstanding %}
 addHeaderAction('so-outstanding', '{% trans "Outstanding Sales Orders" %}', 'fa-sign-out-alt');
 loadSalesOrderTable("#table-so-outstanding", {
@@ -291,7 +301,6 @@ loadSalesOrderTable("#table-so-outstanding", {
 });
 {% endif %}
 
-{% settings_value 'HOMEPAGE_SO_OVERDUE' user=request.user as setting_so_overdue %}
 {% if setting_so_overdue %}
 addHeaderAction('so-overdue', '{% trans "Overdue Sales Orders" %}', 'fa-calendar-times');
 loadSalesOrderTable("#table-so-overdue", {
